--- a/activity/1_session/index.html
+++ b/activity/1_session/index.html
@@ -39,19 +39,24 @@
 </ul>
 
 <pre>
-<code class="language-javascript">// Ejercicio 1
+<code class="language-javascript">
+    // Ejercicio 1
 
-console.log("Ejercicio 1");
+    console.log("Ejercicio 1");
 
-// Ejercicio 2
+    // Ejercicio 2
+    console.log("Ejercicio 1");
 
-// Ejercicio 3
 
-// Ejercicio 4
+    // Ejercicio 3
 
-// Ejercicio 5
+    // Ejercicio 4
 
-// Ejercicio 6</code></pre>
+    // Ejercicio 5
+
+    // Ejercicio 6
+</code>
+</pre>
 
 <h2 id="ejercicio-3">Ejercicio 3</h2>
 <ul>
